fixing contrast for diff states and screen sizes on main menu

--- a/projects/storefrontstyles/scss/components/content/navigation/_navigation-ui.scss
+++ b/projects/storefrontstyles/scss/components/content/navigation/_navigation-ui.scss
@@ -93,6 +93,12 @@
         color: var(--cx-color-primary);
       }
 
+      @include forFeature('santoriniV2') {
+        &:hover {
+          color: var(--cx-color-light);
+        }
+      }
+
       &:focus {
         z-index: 1;
         position: relative;
@@ -130,7 +136,6 @@
         border-bottom: 1px solid var(--cx-color-medium);
         display: flex;
         justify-content: space-between;
-
         cursor: pointer;
       }
 
@@ -138,6 +143,13 @@
       button,
       cx-generic-link a {
         padding: 1rem;
+
+        @include forFeature('santoriniV2') {
+          &:hover {
+            color: var(--cx-color-primary);
+            text-decoration: none;
+          }
+        }
       }
     }
 
@@ -187,6 +199,15 @@
     ul.childs > li > cx-generic-link > a {
       padding: 5px 0;
     }
+    @include forFeature('santoriniV2') {
+      ul.childs > li > button:hover {
+        color: var(--cx-color-text);
+      }
+      ul.childs > li > cx-generic-link > a:hover {
+        color: var(--cx-color-text);
+        text-decoration: underline;
+      }
+    }
   }
 }
 
@@ -231,6 +252,12 @@
       display: block;
       text-decoration: none;
       white-space: nowrap;
+    }
+    @include forFeature('santoriniV2') {
+      a:hover {
+        color: var(--cx-color-inverse);
+        text-decoration: underline;
+      }
     }
   }
 }
