--- a/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
+++ b/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
@@ -15,7 +15,7 @@
   @include forFeature('santoriniV2') {
     &:focus {
       border-color: var(--cx-color-text);
-      box-shadow: 0 0 0 0.2em var(--cx-color-border-medium);
+      background-color: var(--cx-color-inverse);
     }
 
     &::placeholder {
